Fix 'Forecasting graph on the home page has random quality problems'

BUG: 460007
FIXED-IN: 5.1.4

(cherry picked from commit 614548a93eb61e76b1c60bd0ce73af2e972cbce9)