kmymoney/views/khomeview.h
@@ -44,6 +44,7 @@ public:
     void refresh();
 
 protected:
+    void resizeEvent(QResizeEvent* event) override;
     void showEvent(QShowEvent* event) override;
     void wheelEvent(QWheelEvent *event) override;
     bool eventFilter(QObject* o, QEvent* e) override;
